--- a/src/style.css
+++ b/src/style.css
@@ -30,14 +30,7 @@ canvas {
   width: 100%;
   outline: none;
 
-  background: rgb(34, 193, 195);
-  background: linear-gradient(
-    0deg,
-    rgb(8, 163, 166) 0%,
-    rgba(79, 166, 167, 0.849) 8%,
-    rgba(61, 79, 94, 0.885) 40%,
-    rgb(17, 19, 23)
-  );
+  background: rgba(14, 7, 28, 0.512);
 }
 
 h1 {
